2004-06-24  Benjamin Otte  <otte@gnome.org>

	* ext/kio/Makefile.am:
	  fix for builddir != srcdir and distcheck

2004-06-24  Benjamin Otte  <otte@gnome.org>

	* gst-libs/gst/colorbalance/Makefile.am:
	* gst-libs/gst/mixer/Makefile.am:
	* gst-libs/gst/play/Makefile.am:
	* gst-libs/gst/tuner/Makefile.am:
	* gst/tcp/Makefile.am:
	* sys/dxr3/Makefile.am:
	  don't include -enumtypes.[ch] or -marshal.[ch] files in the disted
	  tarball.
	  Also add all *.list files that were missing.
	* Makefile.am:
	  add a distcheck hook to ensure the above doesn't happen again.

2004-06-23  David I. Lehn  <dlehn@users.sourceforge.net>

	* ext/Makefile.am: s/DTS_DIR=dvdread/DTS_DIR=dts/

2004-06-23  Colin Walters  <walters@redhat.com>

	* m4/Makefile.am: Distribute gst-fionread.m4.

2004-06-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: back to dev

2004-06-23  Wim Taymans  <wim@fluendo.com>

	* ext/alsa/gstalsa.c: (gst_alsa_change_state), (gst_alsa_start),
	(gst_alsa_xrun_recovery):
	* ext/alsa/gstalsa.h:
	* ext/alsa/gstalsasink.c: (gst_alsa_sink_check_event),
	(gst_alsa_sink_loop), (gst_alsa_sink_get_time):
	* ext/alsa/gstalsasrc.c: (gst_alsa_src_init),
	(gst_alsa_src_get_time), (gst_alsa_src_update_avail),
	(gst_alsa_src_loop):
	Add clock to alsasrc. Take new capture timestamp when
	restarting after an overrun. Split up some functions between
	alsasrc and alsasink.

=== release 0.8.2 ===

2004-06-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/alsa/gstalsa.c: (gst_alsa_init), (gst_alsa_dispose),
	(gst_alsa_change_state), (gst_alsa_update_avail),
	(gst_alsa_xrun_recovery):
	* ext/alsa/gstalsa.h:
	* ext/alsa/gstalsasink.c: (gst_alsa_sink_check_event):
	  merge back changes from release

2004-06-23  Wim Taymans  <wim@fluendo.com>

	* gst/audiorate/gstaudiorate.c: (gst_audiorate_class_init),
	(gst_audiorate_init), (gst_audiorate_chain),
	(gst_audiorate_set_property), (gst_audiorate_get_property):
	Implement sample dropping and notify
