@@ -45,6 +45,8 @@ struct _GstAudiorate
 
   GstPad *sinkpad, *srcpad;
 
+  gint bytes_per_sample;
+
   /* audio state */
   guint64 next_offset;
 
@@ -190,6 +192,7 @@ gst_audiorate_link (GstPad * pad, const GstCaps * caps)
   GstStructure *structure;
   GstPad *otherpad;
   GstPadLinkReturn res;
+  gint ret, channels, depth;
 
   audiorate = GST_AUDIORATE (gst_pad_get_parent (pad));
 
@@ -201,6 +204,13 @@ gst_audiorate_link (GstPad * pad, const GstCaps * caps)
     return res;
 
   structure = gst_caps_get_structure (caps, 0);
+
+  ret = gst_structure_get_int (structure, "channels", &channels);
+  ret &= gst_structure_get_int (structure, "depth", &depth);
+
+  audiorate->bytes_per_sample = channels * (depth / 8);
+  if (audiorate->bytes_per_sample == 0)
+    audiorate->bytes_per_sample = 1;
 
   return GST_PAD_LINK_OK;
 }
@@ -226,6 +236,7 @@ gst_audiorate_init (GstAudiorate * audiorate)
   gst_pad_set_link_function (audiorate->srcpad, gst_audiorate_link);
   gst_pad_set_getcaps_function (audiorate->srcpad, gst_pad_proxy_getcaps);
 
+  audiorate->bytes_per_sample = 1;
   audiorate->in = 0;
   audiorate->out = 0;
   audiorate->drop = 0;
@@ -241,7 +252,6 @@ gst_audiorate_chain (GstPad * pad, GstData * data)
   GstClockTime in_time, in_duration;
   guint64 in_offset, in_offset_end;
   gint in_size;
-  gint bytes_per_sample;
 
   audiorate = GST_AUDIORATE (gst_pad_get_parent (pad));
 
@@ -261,8 +271,9 @@ gst_audiorate_chain (GstPad * pad, GstData * data)
   in_offset = GST_BUFFER_OFFSET (buf);
   in_offset_end = GST_BUFFER_OFFSET_END (buf);
 
-  /* FIXME: use caps to get this */
-  bytes_per_sample = in_size / (in_offset_end - in_offset);
+  if (in_offset == GST_CLOCK_TIME_NONE || in_offset_end == GST_CLOCK_TIME_NONE) {
+    g_warning ("audiorate got buffer without offsets");
+  }
 
   /* do we need to insert samples */
   if (in_offset > audiorate->next_offset) {
@@ -271,10 +282,12 @@ gst_audiorate_chain (GstPad * pad, GstData * data)
     guint64 fillsamples;
 
     fillsamples = in_offset - audiorate->next_offset;
-    fillsize = fillsamples * bytes_per_sample;
+    fillsize = fillsamples * audiorate->bytes_per_sample;
 
     fill = gst_buffer_new_and_alloc (fillsize);
     memset (GST_BUFFER_DATA (fill), 0, fillsize);
+
+    GST_LOG_OBJECT (audiorate, "inserting %lld samples", fillsamples);
 
     GST_BUFFER_DURATION (fill) = in_duration * fillsize / in_size;
     GST_BUFFER_TIMESTAMP (fill) = in_time - GST_BUFFER_DURATION (fill);
@@ -290,7 +303,11 @@ gst_audiorate_chain (GstPad * pad, GstData * data)
   } else if (in_offset < audiorate->next_offset) {
     /* need to remove samples */
     if (in_offset_end <= audiorate->next_offset) {
-      audiorate->drop += in_size / bytes_per_sample;
+      guint64 drop = in_size / audiorate->bytes_per_sample;
+
+      audiorate->drop += drop;
+
+      GST_LOG_OBJECT (audiorate, "dropping %lld samples", drop);
 
       /* we can drop the buffer completely */
       gst_buffer_unref (buf);
@@ -300,12 +317,12 @@ gst_audiorate_chain (GstPad * pad, GstData * data)
 
       return;
     } else {
-      gint truncsamples, truncsize, leftsize;
+      guint64 truncsamples, truncsize, leftsize;
       GstBuffer *trunc;
 
       /* truncate buffer */
       truncsamples = audiorate->next_offset - in_offset;
-      truncsize = truncsamples * bytes_per_sample;
+      truncsize = truncsamples * audiorate->bytes_per_sample;
       leftsize = in_size - truncsize;
 
       trunc = gst_buffer_create_sub (buf, truncsize, in_size);
@@ -314,6 +331,8 @@ gst_audiorate_chain (GstPad * pad, GstData * data)
           in_time + in_duration - GST_BUFFER_DURATION (trunc);
       GST_BUFFER_OFFSET (trunc) = audiorate->next_offset;
       GST_BUFFER_OFFSET_END (trunc) = in_offset_end;
+
+      GST_LOG_OBJECT (audiorate, "truncating %lld samples", truncsamples);
 
       gst_buffer_unref (buf);
       buf = trunc;
