@@ -339,12 +339,29 @@ gst_videorate_chain (GstPad * pad, GstData * data)
     prevtime = GST_BUFFER_TIMESTAMP (videorate->prevbuf);
     intime = GST_BUFFER_TIMESTAMP (buf);
 
+    GST_LOG_OBJECT (videorate,
+        "videorate: prev buf %" GST_TIME_FORMAT " new buf %" GST_TIME_FORMAT
+        " outgoing ts %" GST_TIME_FORMAT "\n", GST_TIME_ARGS (prevtime),
+        GST_TIME_ARGS (intime), GST_TIME_ARGS (videorate->next_ts));
+
     videorate->in++;
 
     /* got 2 buffers, see which one is the best */
     do {
-      diff1 = abs (prevtime - videorate->next_ts);
-      diff2 = abs (intime - videorate->next_ts) * videorate->new_pref;
+      diff1 = ABS (prevtime - videorate->next_ts);
+      diff2 = ABS (intime - videorate->next_ts);
+
+      /* take absolute values, beware: abs and ABS don't work for gint64 */
+      if (diff1 < 0)
+        diff1 = -diff1;
+      if (diff2 < 0)
+        diff2 = -diff2;
+
+      GST_LOG_OBJECT (videorate,
+          "videorate: diff with prev %" GST_TIME_FORMAT " diff with new %"
+          GST_TIME_FORMAT " outgoing ts %" GST_TIME_FORMAT "\n",
+          GST_TIME_ARGS (diff1), GST_TIME_ARGS (diff2),
+          GST_TIME_ARGS (videorate->next_ts));
 
       /* output first one when its the best */
       if (diff1 <= diff2) {
@@ -360,6 +377,10 @@ gst_videorate_chain (GstPad * pad, GstData * data)
         GST_BUFFER_DURATION (outbuf) =
             videorate->next_ts - GST_BUFFER_TIMESTAMP (outbuf);
         gst_pad_push (videorate->srcpad, GST_DATA (outbuf));
+
+        GST_LOG_OBJECT (videorate,
+            "videorate: old is best, dup, outgoing ts %" GST_TIME_FORMAT " \n",
+            GST_TIME_ARGS (videorate->next_ts));
       }
       /* continue while the first one was the best */
     }
@@ -376,9 +397,16 @@ gst_videorate_chain (GstPad * pad, GstData * data)
       videorate->drop++;
       if (!videorate->silent)
         g_object_notify (G_OBJECT (videorate), "drop");
+      GST_LOG_OBJECT (videorate,
+          "videorate: new is best, old never used, drop, outgoing ts %"
+          GST_TIME_FORMAT " \n", GST_TIME_ARGS (videorate->next_ts));
     }
-//    g_print ("swap: diff1 %lld, diff2 %lld, in %d, out %d, drop %d, dup %d\n", diff1, diff2, 
-//                  videorate->in, videorate->out, videorate->drop, videorate->dup);
+    GST_LOG_OBJECT (videorate,
+        "videorate: left loop, putting new in old, diff1 %" GST_TIME_FORMAT
+        ", diff2 %" GST_TIME_FORMAT
+        ", in %lld, out %lld, drop %lld, dup %lld\n", GST_TIME_ARGS (diff1),
+        GST_TIME_ARGS (diff2), videorate->in, videorate->out, videorate->drop,
+        videorate->dup);
 
     /* swap in new one when it's the best */
     gst_buffer_unref (videorate->prevbuf);
